--- a/hw5.html
+++ b/hw5.html
@@ -5,7 +5,7 @@
     <meta name="description" content="homework 5 for Intro to HTML and CSS">
     <title>homework 5</title>
 </head>
-<body style="background-image:url('leaves in the fall.jpg'); background-color: rgb(135, 126, 126); background-repeat:
+<body style="background-image:url('leaves in the fall.jpg'); background-repeat:
 repeat-x; background-position:top;">
     <header>
         <h1 style="text-align: center;">Homework 5</h1>
