--- a/hw5.html
+++ b/hw5.html
@@ -6,7 +6,7 @@
     <title>homework 5</title>
 </head>
 <body style="background-image:url('https://images.pexels.com/photos/1590549/pexels-photo-1590549.jpeg?auto=compress&cs=tinysrgb&w=175&fit=crop&h=275&dpr=2');background-color: rgb(135, 126, 126); background-size: cover; background-repeat:
-repeat-x; background-position:top;">
+repeat-x;">
     <header>
         <h1 style="text-align: center;">Homework 5</h1>
     </header>
