--- a/hw5.html
+++ b/hw5.html
@@ -34,7 +34,7 @@ repeat-x;">
                 <input type="submit" value="Submit Information">
             </form>
     <footer style="border: 2px solid blue; background-repeat: repeat-x;">
-        <p style="background-image:url('wallpaper.jpeg'); background-repeat: repeat-x; background-position: top; background-size: cover;">This is the first paragraph of my footer.</p>
+        <p style="background-image:url('https://github.com/zunwe/image/blob/main/wallpaper.jpeg?raw=true'); background-repeat: repeat-x; background-position: top; background-size: cover;">This is the first paragraph of my footer.</p>
         <p>This is the second paragraph of my footer.</p>
         <p>This is the third paragraph of my footer.</p>
         <p>This is the fourth paragraph of my footer.</p>
